vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-43.snap
---
source: src/lexer/test.rs
expression: "lex(\"Undefined\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 9,
            },
            kind: Undefined,
        },
    ],
)
