vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-44.snap
---
source: src/lexer/test.rs
expression: "lex(\"True\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 4,
            },
            kind: True,
        },
    ],
)
