vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-48.snap
---
source: src/lexer/test.rs
expression: "lex(\"Is\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 2,
            },
            kind: Is,
        },
    ],
)
