vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-5.snap
---
source: src/lexer/test.rs
expression: "lex(\"Div\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: Div,
        },
    ],
)
