vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-54.snap
---
source: src/lexer/test.rs
expression: "lex(\"Equal\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 5,
            },
            kind: Equal,
        },
    ],
)
