vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-57.snap
---
source: src/lexer/test.rs
expression: "lex(\"Return\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 6,
            },
            kind: Return,
        },
    ],
)
